--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # MONGODB="mongodb://localhost:27017/ShaadiKarloBhai"
 MONGODB="mongodb+srv://jadavpratik743:mUsNEdocO7Y7M5ll@loansystem.hggdmsu.mongodb.net/MatrimonialDb"
 PORT=8888
-URL="https://metromony.onrender.com/"
+URL="https://www.wesindhipunjabi.org/"
 JWT_SCREATE= ShaadiKarloBhai
