--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # MONGODB="mongodb://localhost:27017/ShaadiKarloBhai"
-MONGODB="mongodb+srv://jadavpratik743:mUsNEdocO7Y7M5ll@loansystem.hggdmsu.mongodb.net/MatrimonialDb"
+MONGODB="mongodb+srv://soorajpandya:5782pPJLypj58ZoT@aaradhananew.qcblmcj.mongodb.net/?retryWrites=true&w=majority&appName=aaradhananew"
 PORT=9295
 URL="https://www.wesindhipunjabi.org/"
 JWT_SCREATE= ShaadiKarloBhai
